Fix sticky navbars on safari

--- a/personal_portfolio/static/css/base.css
+++ b/personal_portfolio/static/css/base.css
@@ -7,6 +7,7 @@ body {
 .main-navbar {
     min-height: 5vh;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
 }
 
